Bug 1527182 - With WR enabled, we can async scroll even inside SVG filters. r=botond a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D24877